Fixed some spacing issues and semantics

--- a/scss/mobile/views/_home.scss
+++ b/scss/mobile/views/_home.scss
@@ -47,11 +47,11 @@
     flex-flow: column-reverse;
   }
 
-  #ibm-hero-unit-images {
+  .images {
     height: 284px;
   }
 
-  #ibm-hero-unit-text {
+  .text {
     padding-bottom: 50px;
   }
 
@@ -89,7 +89,7 @@
     flex-flow: column-reverse;
   }
 
-  #somersault-hero-unit-images {
+  .images {
     height: 160px;
   }
 
